tests/fixtures/invalid/none_mul_float.py
# Cannot multiply None and Float
x: float = None * 1.0
